[package]
name = "substrate-relay-helper"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
repository.workspace = true
publish = false
description = "substrate-relay-helper (polkadot v1.15.0)"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
async-std = { workspace = true }
async-trait = { workspace = true }
codec = { workspace = true, default-features = true }
futures = { workspace = true }
hex = { workspace = true, default-features = true }
log = { workspace = true }
num-traits = { workspace = true, default-features = true }
rbtag = { workspace = true }
structopt = { workspace = true }
strum = { features = ["derive"], workspace = true, default-features = true }
thiserror = { workspace = true }
bp-header-chain.workspace = true
bp-header-chain.default-features = true
bp-parachains.workspace = true
bp-parachains.default-features = true
bp-polkadot-core.workspace = true
bp-polkadot-core.default-features = true
bp-relayers.workspace = true
bp-relayers.default-features = true
equivocation-detector.workspace = true
finality-relay.workspace = true
parachains-relay.workspace = true
relay-utils.workspace = true
messages-relay.workspace = true
relay-substrate-client.workspace = true
pallet-bridge-grandpa.workspace = true
pallet-bridge-grandpa.default-features = true
pallet-bridge-messages.workspace = true
pallet-bridge-messages.default-features = true
pallet-bridge-parachains.workspace = true
pallet-bridge-parachains.default-features = true
bp-runtime.workspace = true
bp-runtime.default-features = true
bp-messages.workspace = true
bp-messages.default-features = true
frame-support.workspace = true
frame-support.default-features = true
frame-system.workspace = true
frame-system.default-features = true
pallet-balances.workspace = true
pallet-balances.default-features = true
pallet-grandpa.workspace = true
pallet-grandpa.default-features = true
sp-core.workspace = true
sp-core.default-features = true
sp-consensus-grandpa.workspace = true
sp-consensus-grandpa.default-features = true
sp-runtime.workspace = true
sp-runtime.default-features = true
sp-trie.workspace = true

[dev-dependencies]
scale-info = { features = ["derive"], workspace = true }
pallet-transaction-payment = { default-features = true, path = "../../../substrate/frame/transaction-payment" }
relay-substrate-client = { features = ["test-helpers"], path = "../client-substrate" }

[features]
std = [
	"equivocation-detector/std",
	"finality-relay/std",
	"log/std",
	"messages-relay/std",
	"parachains-relay/std",
	"relay-substrate-client/std",
	"relay-utils/std",
	"scale-info/std",
	"sp-trie/std"
]
runtime-benchmarks = [
	"bp-header-chain/runtime-benchmarks",
	"bp-messages/runtime-benchmarks",
	"bp-parachains/runtime-benchmarks",
	"bp-polkadot-core/runtime-benchmarks",
	"bp-relayers/runtime-benchmarks",
	"bp-runtime/runtime-benchmarks",
	"equivocation-detector/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-bridge-grandpa/runtime-benchmarks",
	"pallet-bridge-messages/runtime-benchmarks",
	"pallet-bridge-parachains/runtime-benchmarks",
	"pallet-grandpa/runtime-benchmarks",
	"pallet-transaction-payment/runtime-benchmarks",
	"relay-substrate-client/runtime-benchmarks",
	"relay-utils/runtime-benchmarks",
	"sp-consensus-grandpa/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"sp-trie/runtime-benchmarks",
	"finality-relay/runtime-benchmarks",
	"messages-relay/runtime-benchmarks",
	"parachains-relay/runtime-benchmarks",
	"sp-core/runtime-benchmarks"
]
try-runtime = [
	"bp-header-chain/try-runtime",
	"bp-messages/try-runtime",
	"bp-parachains/try-runtime",
	"bp-polkadot-core/try-runtime",
	"bp-relayers/try-runtime",
	"bp-runtime/try-runtime",
	"equivocation-detector/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-bridge-grandpa/try-runtime",
	"pallet-bridge-messages/try-runtime",
	"pallet-bridge-parachains/try-runtime",
	"pallet-grandpa/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"relay-substrate-client/try-runtime",
	"relay-utils/try-runtime",
	"sp-consensus-grandpa/try-runtime",
	"sp-runtime/try-runtime",
	"sp-trie/try-runtime",
	"finality-relay/try-runtime",
	"messages-relay/try-runtime",
	"parachains-relay/try-runtime",
	"sp-core/try-runtime"
]
