[package]
name = "messages-relay"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
repository.workspace = true
publish = false
description = "messages-relay (polkadot v1.15.0)"

[lints]
workspace = true

[dependencies]
async-std = { features = ["attributes"], workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
hex = { workspace = true, default-features = true }
log = { workspace = true }
num-traits = { workspace = true, default-features = true }
parking_lot = { workspace = true, default-features = true }
bp-messages.workspace = true
bp-messages.default-features = true
finality-relay.workspace = true
relay-utils.workspace = true
sp-arithmetic.workspace = true
sp-arithmetic.default-features = true

[features]
std = [
	"finality-relay/std",
	"log/std",
	"relay-utils/std"
]
runtime-benchmarks = [
	"bp-messages/runtime-benchmarks",
	"finality-relay/runtime-benchmarks",
	"relay-utils/runtime-benchmarks"
]
try-runtime = [
	"bp-messages/try-runtime",
	"finality-relay/try-runtime",
	"relay-utils/try-runtime"
]
