[package]
name = "parachains-relay"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
repository.workspace = true
publish = false
description = "parachains-relay (polkadot v1.15.0)"

[lints]
workspace = true

[dependencies]
async-std = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
relay-utils.workspace = true
bp-polkadot-core.workspace = true
bp-polkadot-core.default-features = true
relay-substrate-client.workspace = true

[dev-dependencies]
codec = { workspace = true, default-features = true }
relay-substrate-client = { features = ["test-helpers"], path = "../client-substrate" }
sp-core = { default-features = true, path = "../../../substrate/primitives/core" }

[features]
std = [
	"log/std",
	"relay-substrate-client/std",
	"relay-utils/std"
]
runtime-benchmarks = [
	"bp-polkadot-core/runtime-benchmarks",
	"relay-substrate-client/runtime-benchmarks",
	"relay-utils/runtime-benchmarks",
	"sp-core/runtime-benchmarks"
]
try-runtime = [
	"bp-polkadot-core/try-runtime",
	"relay-substrate-client/try-runtime",
	"relay-utils/try-runtime",
	"sp-core/try-runtime"
]
