[package]
name = "cumulus-client-cli"
version = "0.17.0"
authors.workspace = true
edition.workspace = true
description = "Parachain node CLI utilities. (polkadot v1.15.0)"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[lints]
workspace = true

[dependencies]
clap = { features = ["derive"], workspace = true }
codec = { workspace = true, default-features = true }
url = { workspace = true }
sc-cli.workspace = true
sc-cli.default-features = true
sc-client-api.workspace = true
sc-client-api.default-features = true
sc-chain-spec.workspace = true
sc-chain-spec.default-features = true
sc-service.workspace = true
sc-service.default-features = true
sp-core.workspace = true
sp-core.default-features = true
sp-runtime.workspace = true
sp-runtime.default-features = true
sp-blockchain.workspace = true
sp-blockchain.default-features = true

[features]
std = [
	"sc-chain-spec/std",
	"sc-cli/std",
	"sc-client-api/std",
	"sc-service/std",
	"sp-blockchain/std"
]
runtime-benchmarks = [
	"sc-chain-spec/runtime-benchmarks",
	"sc-cli/runtime-benchmarks",
	"sc-client-api/runtime-benchmarks",
	"sc-service/runtime-benchmarks",
	"sp-blockchain/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"sp-core/runtime-benchmarks"
]
try-runtime = [
	"sc-chain-spec/try-runtime",
	"sc-cli/try-runtime",
	"sc-client-api/try-runtime",
	"sc-service/try-runtime",
	"sp-blockchain/try-runtime",
	"sp-runtime/try-runtime",
	"sp-core/try-runtime"
]
