[package]
name = "cumulus-client-collator"
version = "0.17.0"
authors.workspace = true
edition.workspace = true
description = "Common node-side functionality and glue code to collate parachain blocks. (polkadot v1.15.0)"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[lints]
workspace = true

[dependencies]
parking_lot = { workspace = true, default-features = true }
codec = { features = ["derive"], workspace = true, default-features = true }
futures = { workspace = true }
tracing = { workspace = true, default-features = true }
sc-client-api.workspace = true
sc-client-api.default-features = true
sp-consensus.workspace = true
sp-consensus.default-features = true
sp-api.workspace = true
sp-api.default-features = true
sp-core.workspace = true
sp-core.default-features = true
sp-runtime.workspace = true
sp-runtime.default-features = true
polkadot-node-primitives.workspace = true
polkadot-node-primitives.default-features = true
polkadot-node-subsystem.workspace = true
polkadot-node-subsystem.default-features = true
polkadot-overseer.workspace = true
polkadot-overseer.default-features = true
polkadot-primitives.workspace = true
polkadot-primitives.default-features = true
cumulus-client-consensus-common.workspace = true
cumulus-client-consensus-common.default-features = true
cumulus-client-network.workspace = true
cumulus-client-network.default-features = true
cumulus-primitives-core.workspace = true
cumulus-primitives-core.default-features = true

[dev-dependencies]
async-trait = { workspace = true }

# Substrate
sp-maybe-compressed-blob = { default-features = true, path = "../../../substrate/primitives/maybe-compressed-blob" }
sp-state-machine = { default-features = true, path = "../../../substrate/primitives/state-machine" }
sp-tracing = { default-features = true, path = "../../../substrate/primitives/tracing" }

# Polkadot
polkadot-node-subsystem-test-helpers = { path = "../../../polkadot/node/subsystem-test-helpers" }

# Cumulus
cumulus-test-client = { path = "../../test/client" }
cumulus-test-runtime = { path = "../../test/runtime" }
cumulus-test-relay-sproof-builder = { default-features = true, path = "../../test/relay-sproof-builder" }

[features]
std = [
	"cumulus-client-consensus-common/std",
	"cumulus-client-network/std",
	"cumulus-test-client/std",
	"polkadot-node-primitives/std",
	"polkadot-node-subsystem-test-helpers/std",
	"polkadot-overseer/std",
	"sc-client-api/std",
	"sp-consensus/std",
	"polkadot-node-subsystem/std"
]
runtime-benchmarks = [
	"cumulus-client-consensus-common/runtime-benchmarks",
	"cumulus-client-network/runtime-benchmarks",
	"cumulus-primitives-core/runtime-benchmarks",
	"cumulus-test-client/runtime-benchmarks",
	"cumulus-test-relay-sproof-builder/runtime-benchmarks",
	"cumulus-test-runtime/runtime-benchmarks",
	"polkadot-node-primitives/runtime-benchmarks",
	"polkadot-node-subsystem-test-helpers/runtime-benchmarks",
	"polkadot-overseer/runtime-benchmarks",
	"polkadot-primitives/runtime-benchmarks",
	"sc-client-api/runtime-benchmarks",
	"sp-api/runtime-benchmarks",
	"sp-consensus/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"sp-state-machine/runtime-benchmarks",
	"polkadot-node-subsystem/runtime-benchmarks",
	"sp-core/runtime-benchmarks"
]
try-runtime = [
	"cumulus-client-consensus-common/try-runtime",
	"cumulus-client-network/try-runtime",
	"cumulus-primitives-core/try-runtime",
	"cumulus-test-client/try-runtime",
	"cumulus-test-relay-sproof-builder/try-runtime",
	"cumulus-test-runtime/try-runtime",
	"polkadot-node-primitives/try-runtime",
	"polkadot-primitives/try-runtime",
	"sc-client-api/try-runtime",
	"sp-api/try-runtime",
	"sp-consensus/try-runtime",
	"sp-runtime/try-runtime",
	"sp-state-machine/try-runtime",
	"polkadot-node-subsystem/try-runtime",
	"polkadot-node-subsystem-test-helpers/try-runtime",
	"polkadot-overseer/try-runtime",
	"sp-core/try-runtime"
]
