[package]
name = "cumulus-client-network"
version = "0.17.0"
authors.workspace = true
description = "Cumulus-specific networking protocol (polkadot v1.15.0)"
edition.workspace = true
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
codec = { features = ["derive"], workspace = true, default-features = true }
futures = { workspace = true }
futures-timer = { workspace = true }
parking_lot = { workspace = true, default-features = true }
tracing = { workspace = true, default-features = true }
sc-client-api.workspace = true
sc-client-api.default-features = true
sp-blockchain.workspace = true
sp-blockchain.default-features = true
sp-consensus.workspace = true
sp-consensus.default-features = true
sp-core.workspace = true
sp-core.default-features = true
sp-runtime.workspace = true
sp-runtime.default-features = true
sp-state-machine.workspace = true
sp-state-machine.default-features = true
sp-api.workspace = true
sp-api.default-features = true
sp-version.workspace = true
sp-version.default-features = true
polkadot-node-primitives.workspace = true
polkadot-node-primitives.default-features = true
polkadot-parachain-primitives.workspace = true
polkadot-parachain-primitives.default-features = true
polkadot-primitives.workspace = true
polkadot-primitives.default-features = true
polkadot-node-subsystem.workspace = true
polkadot-node-subsystem.default-features = true
cumulus-relay-chain-interface.workspace = true
cumulus-relay-chain-interface.default-features = true

[dev-dependencies]
portpicker = { workspace = true }
tokio = { features = ["macros"], workspace = true, default-features = true }
url = { workspace = true }
rstest = { workspace = true }

# Substrate
sc-cli = { default-features = true, path = "../../../substrate/client/cli" }
sc-client-api = { default-features = true, path = "../../../substrate/client/api" }
sp-consensus = { default-features = true, path = "../../../substrate/primitives/consensus/common" }
sp-core = { default-features = true, path = "../../../substrate/primitives/core" }
sp-keyring = { default-features = true, path = "../../../substrate/primitives/keyring" }
sp-keystore = { default-features = true, path = "../../../substrate/primitives/keystore" }
substrate-test-utils = { path = "../../../substrate/test-utils" }

# Polkadot
polkadot-test-client = { path = "../../../polkadot/node/test/client" }

# Cumulus
cumulus-primitives-core = { default-features = true, path = "../../primitives/core" }
cumulus-relay-chain-inprocess-interface = { default-features = true, path = "../relay-chain-inprocess-interface" }
cumulus-test-service = { path = "../../test/service" }

[features]
std = [
	"cumulus-relay-chain-inprocess-interface/std",
	"cumulus-relay-chain-interface/std",
	"cumulus-test-service/std",
	"polkadot-node-primitives/std",
	"polkadot-test-client/std",
	"sc-cli/std",
	"sc-client-api/std",
	"sp-blockchain/std",
	"sp-consensus/std",
	"substrate-test-utils/std",
	"polkadot-node-subsystem/std"
]
runtime-benchmarks = [
	"cumulus-primitives-core/runtime-benchmarks",
	"cumulus-relay-chain-inprocess-interface/runtime-benchmarks",
	"cumulus-relay-chain-interface/runtime-benchmarks",
	"cumulus-test-service/runtime-benchmarks",
	"polkadot-node-primitives/runtime-benchmarks",
	"polkadot-parachain-primitives/runtime-benchmarks",
	"polkadot-primitives/runtime-benchmarks",
	"polkadot-test-client/runtime-benchmarks",
	"sc-cli/runtime-benchmarks",
	"sc-client-api/runtime-benchmarks",
	"sp-api/runtime-benchmarks",
	"sp-blockchain/runtime-benchmarks",
	"sp-consensus/runtime-benchmarks",
	"sp-keyring/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"sp-state-machine/runtime-benchmarks",
	"sp-version/runtime-benchmarks",
	"substrate-test-utils/runtime-benchmarks",
	"polkadot-node-subsystem/runtime-benchmarks",
	"sp-core/runtime-benchmarks",
	"sp-keystore/runtime-benchmarks"
]
try-runtime = [
	"cumulus-primitives-core/try-runtime",
	"cumulus-relay-chain-inprocess-interface/try-runtime",
	"cumulus-test-service/try-runtime",
	"polkadot-node-primitives/try-runtime",
	"polkadot-parachain-primitives/try-runtime",
	"polkadot-primitives/try-runtime",
	"polkadot-test-client/try-runtime",
	"sc-cli/try-runtime",
	"sc-client-api/try-runtime",
	"sp-api/try-runtime",
	"sp-blockchain/try-runtime",
	"sp-consensus/try-runtime",
	"sp-keyring/try-runtime",
	"sp-runtime/try-runtime",
	"sp-state-machine/try-runtime",
	"sp-version/try-runtime",
	"cumulus-relay-chain-interface/try-runtime",
	"polkadot-node-subsystem/try-runtime",
	"substrate-test-utils/try-runtime",
	"sp-core/try-runtime",
	"sp-keystore/try-runtime"
]
