[package]
name = "cumulus-client-parachain-inherent"
version = "0.11.0"
authors.workspace = true
edition.workspace = true
description = "Inherent that needs to be present in every parachain block. Contains messages and a relay chain storage-proof. (polkadot v1.15.0)"
license = "Apache-2.0"

[dependencies]
async-trait = { workspace = true }
codec = { features = ["derive"], workspace = true, default-features = true }
tracing = { workspace = true, default-features = true }
sc-client-api.workspace = true
sc-client-api.default-features = true
sp-api.workspace = true
sp-api.default-features = true
sp-crypto-hashing.workspace = true
sp-crypto-hashing.default-features = true
sp-inherents.workspace = true
sp-inherents.default-features = true
sp-runtime.workspace = true
sp-runtime.default-features = true
sp-state-machine.workspace = true
sp-state-machine.default-features = true
sp-storage.workspace = true
sp-storage.default-features = true
sp-trie.workspace = true
sp-trie.default-features = true
cumulus-primitives-core.workspace = true
cumulus-primitives-core.default-features = true
cumulus-primitives-parachain-inherent.workspace = true
cumulus-primitives-parachain-inherent.default-features = true
cumulus-relay-chain-interface.workspace = true
cumulus-relay-chain-interface.default-features = true
cumulus-test-relay-sproof-builder.workspace = true
cumulus-test-relay-sproof-builder.default-features = true

[features]
std = [
	"cumulus-relay-chain-interface/std",
	"sc-client-api/std"
]
runtime-benchmarks = [
	"cumulus-primitives-core/runtime-benchmarks",
	"cumulus-primitives-parachain-inherent/runtime-benchmarks",
	"cumulus-relay-chain-interface/runtime-benchmarks",
	"cumulus-test-relay-sproof-builder/runtime-benchmarks",
	"sc-client-api/runtime-benchmarks",
	"sp-api/runtime-benchmarks",
	"sp-inherents/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"sp-state-machine/runtime-benchmarks",
	"sp-trie/runtime-benchmarks"
]
try-runtime = [
	"cumulus-primitives-core/try-runtime",
	"cumulus-primitives-parachain-inherent/try-runtime",
	"cumulus-test-relay-sproof-builder/try-runtime",
	"sc-client-api/try-runtime",
	"sp-api/try-runtime",
	"sp-inherents/try-runtime",
	"sp-runtime/try-runtime",
	"sp-state-machine/try-runtime",
	"sp-trie/try-runtime",
	"cumulus-relay-chain-interface/try-runtime"
]
