[package]
name = "cumulus-client-pov-recovery"
version = "0.17.0"
authors.workspace = true
description = "Cumulus-specific networking protocol (polkadot v1.15.0)"
edition.workspace = true
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[lints]
workspace = true

[dependencies]
codec = { features = ["derive"], workspace = true, default-features = true }
futures = { workspace = true }
futures-timer = { workspace = true }
rand = { workspace = true, default-features = true }
tracing = { workspace = true, default-features = true }
sc-client-api.workspace = true
sc-client-api.default-features = true
sc-consensus.workspace = true
sc-consensus.default-features = true
sp-consensus.workspace = true
sp-consensus.default-features = true
sp-maybe-compressed-blob.workspace = true
sp-maybe-compressed-blob.default-features = true
sp-runtime.workspace = true
sp-runtime.default-features = true
sp-api.workspace = true
sp-api.default-features = true
sp-version.workspace = true
sp-version.default-features = true
polkadot-node-primitives.workspace = true
polkadot-node-primitives.default-features = true
polkadot-node-subsystem.workspace = true
polkadot-node-subsystem.default-features = true
polkadot-overseer.workspace = true
polkadot-overseer.default-features = true
polkadot-primitives.workspace = true
polkadot-primitives.default-features = true
cumulus-primitives-core.workspace = true
cumulus-primitives-core.default-features = true
cumulus-relay-chain-interface.workspace = true
cumulus-relay-chain-interface.default-features = true
async-trait = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
tokio = { features = ["macros"], workspace = true, default-features = true }
portpicker = { workspace = true }
sp-blockchain = { default-features = true, path = "../../../substrate/primitives/blockchain" }
cumulus-test-client = { path = "../../test/client" }
sc-utils = { default-features = true, path = "../../../substrate/client/utils" }
sp-tracing = { default-features = true, path = "../../../substrate/primitives/tracing" }
assert_matches = { workspace = true }

# Cumulus
cumulus-test-service = { path = "../../test/service" }

# Substrate
sc-cli = { default-features = true, path = "../../../substrate/client/cli" }
sc-client-api = { default-features = true, path = "../../../substrate/client/api" }
substrate-test-utils = { path = "../../../substrate/test-utils" }

[features]
std = [
	"cumulus-relay-chain-interface/std",
	"cumulus-test-client/std",
	"cumulus-test-service/std",
	"polkadot-node-primitives/std",
	"polkadot-overseer/std",
	"sc-cli/std",
	"sc-client-api/std",
	"sc-consensus/std",
	"sc-utils/std",
	"sp-blockchain/std",
	"sp-consensus/std",
	"substrate-test-utils/std",
	"polkadot-node-subsystem/std"
]
runtime-benchmarks = [
	"cumulus-primitives-core/runtime-benchmarks",
	"cumulus-relay-chain-interface/runtime-benchmarks",
	"cumulus-test-client/runtime-benchmarks",
	"cumulus-test-service/runtime-benchmarks",
	"polkadot-node-primitives/runtime-benchmarks",
	"polkadot-overseer/runtime-benchmarks",
	"polkadot-primitives/runtime-benchmarks",
	"sc-cli/runtime-benchmarks",
	"sc-client-api/runtime-benchmarks",
	"sc-consensus/runtime-benchmarks",
	"sp-api/runtime-benchmarks",
	"sp-blockchain/runtime-benchmarks",
	"sp-consensus/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"sp-version/runtime-benchmarks",
	"substrate-test-utils/runtime-benchmarks",
	"polkadot-node-subsystem/runtime-benchmarks"
]
try-runtime = [
	"cumulus-primitives-core/try-runtime",
	"cumulus-test-client/try-runtime",
	"cumulus-test-service/try-runtime",
	"polkadot-node-primitives/try-runtime",
	"polkadot-primitives/try-runtime",
	"sc-cli/try-runtime",
	"sc-client-api/try-runtime",
	"sc-consensus/try-runtime",
	"sp-api/try-runtime",
	"sp-blockchain/try-runtime",
	"sp-consensus/try-runtime",
	"sp-runtime/try-runtime",
	"sp-version/try-runtime",
	"cumulus-relay-chain-interface/try-runtime",
	"polkadot-node-subsystem/try-runtime",
	"polkadot-overseer/try-runtime",
	"substrate-test-utils/try-runtime"
]
