[package]
authors.workspace = true
name = "cumulus-relay-chain-inprocess-interface"
version = "0.17.0"
edition.workspace = true
description = "Implementation of the RelayChainInterface trait for Polkadot full-nodes. (polkadot v1.15.0)"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
futures = { workspace = true }
futures-timer = { workspace = true }
sc-cli.workspace = true
sc-cli.default-features = true
sc-client-api.workspace = true
sc-client-api.default-features = true
sc-telemetry.workspace = true
sc-telemetry.default-features = true
sc-tracing.workspace = true
sc-tracing.default-features = true
sc-sysinfo.workspace = true
sc-sysinfo.default-features = true
sp-api.workspace = true
sp-api.default-features = true
sp-consensus.workspace = true
sp-consensus.default-features = true
sp-core.workspace = true
sp-core.default-features = true
sp-runtime.workspace = true
sp-runtime.default-features = true
sp-state-machine.workspace = true
sp-state-machine.default-features = true
polkadot-cli = { features = ["cli"], workspace = true }
polkadot-service.workspace = true
polkadot-service.default-features = true
cumulus-primitives-core.workspace = true
cumulus-primitives-core.default-features = true
cumulus-relay-chain-interface.workspace = true
cumulus-relay-chain-interface.default-features = true

[dev-dependencies]

# Substrate
sp-keyring = { default-features = true, path = "../../../substrate/primitives/keyring" }

# Polkadot
polkadot-primitives = { default-features = true, path = "../../../polkadot/primitives" }
polkadot-test-client = { path = "../../../polkadot/node/test/client" }
metered = { features = ["futures_channel"], workspace = true }

# Cumulus
cumulus-test-service = { path = "../../test/service" }

[features]
std = [
	"cumulus-relay-chain-interface/std",
	"cumulus-test-service/std",
	"polkadot-cli/std",
	"polkadot-service/std",
	"polkadot-test-client/std",
	"sc-cli/std",
	"sc-client-api/std",
	"sc-sysinfo/std",
	"sc-telemetry/std",
	"sc-tracing/std",
	"sp-consensus/std"
]
runtime-benchmarks = [
	"cumulus-primitives-core/runtime-benchmarks",
	"cumulus-relay-chain-interface/runtime-benchmarks",
	"cumulus-test-service/runtime-benchmarks",
	"polkadot-cli/runtime-benchmarks",
	"polkadot-primitives/runtime-benchmarks",
	"polkadot-service/runtime-benchmarks",
	"polkadot-test-client/runtime-benchmarks",
	"sc-cli/runtime-benchmarks",
	"sc-client-api/runtime-benchmarks",
	"sc-sysinfo/runtime-benchmarks",
	"sc-tracing/runtime-benchmarks",
	"sp-api/runtime-benchmarks",
	"sp-consensus/runtime-benchmarks",
	"sp-keyring/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"sp-state-machine/runtime-benchmarks",
	"sc-telemetry/runtime-benchmarks",
	"sp-core/runtime-benchmarks"
]
try-runtime = [
	"cumulus-primitives-core/try-runtime",
	"cumulus-test-service/try-runtime",
	"polkadot-cli/try-runtime",
	"polkadot-primitives/try-runtime",
	"polkadot-service/try-runtime",
	"polkadot-test-client/try-runtime",
	"sc-cli/try-runtime",
	"sc-client-api/try-runtime",
	"sc-sysinfo/try-runtime",
	"sc-tracing/try-runtime",
	"sp-api/try-runtime",
	"sp-consensus/try-runtime",
	"sp-keyring/try-runtime",
	"sp-runtime/try-runtime",
	"sp-state-machine/try-runtime",
	"cumulus-relay-chain-interface/try-runtime",
	"sc-telemetry/try-runtime",
	"sp-core/try-runtime"
]
