[package]
authors.workspace = true
name = "cumulus-relay-chain-interface"
version = "0.17.0"
edition.workspace = true
description = "Common interface for different relay chain datasources. (polkadot v1.15.0)"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[lints]
workspace = true

[dependencies]
polkadot-overseer.workspace = true
polkadot-overseer.default-features = true
cumulus-primitives-core.workspace = true
cumulus-primitives-core.default-features = true
sp-api.workspace = true
sp-api.default-features = true
sp-blockchain.workspace = true
sp-blockchain.default-features = true
sp-state-machine.workspace = true
sp-state-machine.default-features = true
sc-client-api.workspace = true
sc-client-api.default-features = true
sp-version.workspace = true

futures = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
jsonrpsee-core = { workspace = true }
codec = { workspace = true, default-features = true }

[features]
std = [
	"polkadot-overseer/std",
	"sc-client-api/std",
	"sp-blockchain/std",
	"sp-version/std"
]
runtime-benchmarks = [
	"cumulus-primitives-core/runtime-benchmarks",
	"polkadot-overseer/runtime-benchmarks",
	"sc-client-api/runtime-benchmarks",
	"sp-api/runtime-benchmarks",
	"sp-blockchain/runtime-benchmarks",
	"sp-state-machine/runtime-benchmarks",
	"sp-version/runtime-benchmarks"
]
try-runtime = [
	"cumulus-primitives-core/try-runtime",
	"polkadot-overseer/try-runtime",
	"sc-client-api/try-runtime",
	"sp-api/try-runtime",
	"sp-blockchain/try-runtime",
	"sp-state-machine/try-runtime",
	"sp-version/try-runtime"
]
