[package]
authors.workspace = true
name = "cumulus-relay-chain-minimal-node"
version = "0.17.0"
edition.workspace = true
description = "Minimal node implementation to be used in tandem with RPC or light-client mode. (polkadot v1.15.0)"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[lints]
workspace = true

[dependencies]
polkadot-primitives.workspace = true
polkadot-primitives.default-features = true
polkadot-core-primitives.workspace = true
polkadot-core-primitives.default-features = true
polkadot-overseer.workspace = true
polkadot-overseer.default-features = true
polkadot-node-subsystem-util.workspace = true
polkadot-node-subsystem-util.default-features = true
polkadot-node-network-protocol.workspace = true
polkadot-node-network-protocol.default-features = true
polkadot-network-bridge.workspace = true
polkadot-network-bridge.default-features = true
polkadot-service.workspace = true
polkadot-service.default-features = true
sc-authority-discovery.workspace = true
sc-authority-discovery.default-features = true
sc-network.workspace = true
sc-network.default-features = true
sc-network-common.workspace = true
sc-network-common.default-features = true
sc-service.workspace = true
sc-service.default-features = true
sc-client-api.workspace = true
sc-client-api.default-features = true
prometheus-endpoint.workspace = true
prometheus-endpoint.default-features = true
sc-tracing.workspace = true
sc-tracing.default-features = true
sc-utils.workspace = true
sc-utils.default-features = true
sp-api.workspace = true
sp-api.default-features = true
sp-consensus-babe.workspace = true
sp-consensus-babe.default-features = true
sp-consensus.workspace = true
sp-consensus.default-features = true
sp-runtime.workspace = true
sp-runtime.default-features = true
sp-blockchain.workspace = true
sp-blockchain.default-features = true
tokio = { features = ["macros"], workspace = true, default-features = true }
cumulus-relay-chain-interface.workspace = true
cumulus-relay-chain-interface.default-features = true
cumulus-relay-chain-rpc-interface.workspace = true
cumulus-relay-chain-rpc-interface.default-features = true
cumulus-primitives-core.workspace = true
cumulus-primitives-core.default-features = true

array-bytes = { workspace = true, default-features = true }
tracing = { workspace = true, default-features = true }
async-trait = { workspace = true }
futures = { workspace = true }

[features]
std = [
	"cumulus-relay-chain-interface/std",
	"cumulus-relay-chain-rpc-interface/std",
	"polkadot-network-bridge/std",
	"polkadot-node-network-protocol/std",
	"polkadot-node-subsystem-util/std",
	"polkadot-overseer/std",
	"polkadot-service/std",
	"sc-authority-discovery/std",
	"sc-client-api/std",
	"sc-network/std",
	"sc-network-common/std",
	"sc-service/std",
	"sc-tracing/std",
	"sc-utils/std",
	"sp-blockchain/std",
	"sp-consensus/std",
	"prometheus-endpoint/std"
]
runtime-benchmarks = [
	"cumulus-primitives-core/runtime-benchmarks",
	"cumulus-relay-chain-interface/runtime-benchmarks",
	"cumulus-relay-chain-rpc-interface/runtime-benchmarks",
	"polkadot-core-primitives/runtime-benchmarks",
	"polkadot-network-bridge/runtime-benchmarks",
	"polkadot-node-network-protocol/runtime-benchmarks",
	"polkadot-node-subsystem-util/runtime-benchmarks",
	"polkadot-overseer/runtime-benchmarks",
	"polkadot-primitives/runtime-benchmarks",
	"polkadot-service/runtime-benchmarks",
	"sc-authority-discovery/runtime-benchmarks",
	"sc-client-api/runtime-benchmarks",
	"sc-network/runtime-benchmarks",
	"sc-network-common/runtime-benchmarks",
	"sc-service/runtime-benchmarks",
	"sc-tracing/runtime-benchmarks",
	"sp-api/runtime-benchmarks",
	"sp-blockchain/runtime-benchmarks",
	"sp-consensus/runtime-benchmarks",
	"sp-consensus-babe/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks"
]
try-runtime = [
	"cumulus-primitives-core/try-runtime",
	"cumulus-relay-chain-rpc-interface/try-runtime",
	"polkadot-core-primitives/try-runtime",
	"polkadot-node-network-protocol/try-runtime",
	"polkadot-primitives/try-runtime",
	"polkadot-service/try-runtime",
	"sc-authority-discovery/try-runtime",
	"sc-client-api/try-runtime",
	"sc-network/try-runtime",
	"sc-network-common/try-runtime",
	"sc-service/try-runtime",
	"sc-tracing/try-runtime",
	"sp-api/try-runtime",
	"sp-blockchain/try-runtime",
	"sp-consensus/try-runtime",
	"sp-consensus-babe/try-runtime",
	"sp-runtime/try-runtime",
	"cumulus-relay-chain-interface/try-runtime",
	"polkadot-network-bridge/try-runtime",
	"polkadot-node-subsystem-util/try-runtime",
	"polkadot-overseer/try-runtime"
]
