[package]
authors.workspace = true
name = "cumulus-relay-chain-rpc-interface"
version = "0.17.0"
edition.workspace = true
description = "Implementation of the RelayChainInterface trait that connects to a remote RPC-node. (polkadot v1.15.0)"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[lints]
workspace = true

[dependencies]
polkadot-overseer.workspace = true
polkadot-overseer.default-features = true
cumulus-primitives-core.workspace = true
cumulus-primitives-core.default-features = true
cumulus-relay-chain-interface.workspace = true
cumulus-relay-chain-interface.default-features = true
sp-api.workspace = true
sp-api.default-features = true
sp-core.workspace = true
sp-core.default-features = true
sp-consensus-babe.workspace = true
sp-consensus-babe.default-features = true
sp-authority-discovery.workspace = true
sp-authority-discovery.default-features = true
sp-state-machine.workspace = true
sp-state-machine.default-features = true
sp-storage.workspace = true
sp-storage.default-features = true
sp-runtime.workspace = true
sp-runtime.default-features = true
sp-version.workspace = true
sp-version.default-features = true
sc-client-api.workspace = true
sc-client-api.default-features = true
sc-rpc-api.workspace = true
sc-rpc-api.default-features = true
sc-service.workspace = true
sc-service.default-features = true

tokio = { features = ["sync"], workspace = true, default-features = true }
tokio-util = { features = ["compat"], workspace = true }

futures = { workspace = true }
futures-timer = { workspace = true }
codec = { workspace = true, default-features = true }
jsonrpsee = { features = ["ws-client"], workspace = true }
tracing = { workspace = true, default-features = true }
async-trait = { workspace = true }
url = { workspace = true }
serde_json = { workspace = true, default-features = true }
serde = { workspace = true, default-features = true }
schnellru = { workspace = true }
smoldot = { default_features = false, features = ["std"], workspace = true }
smoldot-light = { default_features = false, features = ["std"], workspace = true }
either = { workspace = true, default-features = true }
thiserror = { workspace = true }
rand = { workspace = true, default-features = true }
pin-project = { workspace = true }

[features]
std = [
	"cumulus-relay-chain-interface/std",
	"polkadot-overseer/std",
	"sc-client-api/std",
	"sc-rpc-api/std",
	"sc-service/std",
	"smoldot/std",
	"smoldot-light/std"
]
runtime-benchmarks = [
	"cumulus-primitives-core/runtime-benchmarks",
	"cumulus-relay-chain-interface/runtime-benchmarks",
	"polkadot-overseer/runtime-benchmarks",
	"sc-client-api/runtime-benchmarks",
	"sc-rpc-api/runtime-benchmarks",
	"sc-service/runtime-benchmarks",
	"sp-api/runtime-benchmarks",
	"sp-authority-discovery/runtime-benchmarks",
	"sp-consensus-babe/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"sp-state-machine/runtime-benchmarks",
	"sp-version/runtime-benchmarks",
	"sp-core/runtime-benchmarks"
]
try-runtime = [
	"cumulus-primitives-core/try-runtime",
	"sc-client-api/try-runtime",
	"sc-rpc-api/try-runtime",
	"sc-service/try-runtime",
	"sp-api/try-runtime",
	"sp-authority-discovery/try-runtime",
	"sp-consensus-babe/try-runtime",
	"sp-runtime/try-runtime",
	"sp-state-machine/try-runtime",
	"sp-version/try-runtime",
	"cumulus-relay-chain-interface/try-runtime",
	"polkadot-overseer/try-runtime",
	"sp-core/try-runtime"
]
