[package]
name = "cumulus-client-service"
version = "0.17.0"
authors.workspace = true
edition.workspace = true
description = "Common functions used to assemble the components of a parachain node. (polkadot v1.15.0)"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[lints]
workspace = true

[dependencies]
futures = { workspace = true }
sc-client-api.workspace = true
sc-client-api.default-features = true
sc-consensus.workspace = true
sc-consensus.default-features = true
sc-transaction-pool.workspace = true
sc-transaction-pool.default-features = true
sc-rpc.workspace = true
sc-rpc.default-features = true
sc-service.workspace = true
sc-service.default-features = true
sc-sysinfo.workspace = true
sc-sysinfo.default-features = true
sc-telemetry.workspace = true
sc-telemetry.default-features = true
sc-network.workspace = true
sc-network.default-features = true
sc-network-sync.workspace = true
sc-network-sync.default-features = true
sc-utils.workspace = true
sc-utils.default-features = true
sc-network-transactions.workspace = true
sc-network-transactions.default-features = true
sp-api.workspace = true
sp-api.default-features = true
sp-blockchain.workspace = true
sp-blockchain.default-features = true
sp-consensus.workspace = true
sp-consensus.default-features = true
sp-core.workspace = true
sp-core.default-features = true
sp-runtime.workspace = true
sp-runtime.default-features = true
sp-transaction-pool.workspace = true
sp-transaction-pool.default-features = true
sp-io.workspace = true
sp-io.default-features = true
polkadot-primitives.workspace = true
polkadot-primitives.default-features = true
cumulus-client-cli.workspace = true
cumulus-client-cli.default-features = true
cumulus-client-collator.workspace = true
cumulus-client-collator.default-features = true
cumulus-client-consensus-common.workspace = true
cumulus-client-consensus-common.default-features = true
cumulus-client-pov-recovery.workspace = true
cumulus-client-pov-recovery.default-features = true
cumulus-client-network.workspace = true
cumulus-client-network.default-features = true
cumulus-primitives-core.workspace = true
cumulus-primitives-core.default-features = true
cumulus-primitives-proof-size-hostfunction.workspace = true
cumulus-primitives-proof-size-hostfunction.default-features = true
cumulus-relay-chain-interface.workspace = true
cumulus-relay-chain-interface.default-features = true
cumulus-relay-chain-inprocess-interface.workspace = true
cumulus-relay-chain-inprocess-interface.default-features = true
cumulus-relay-chain-minimal-node.workspace = true
cumulus-relay-chain-minimal-node.default-features = true

[features]
std = [
	"cumulus-client-cli/std",
	"cumulus-client-collator/std",
	"cumulus-client-consensus-common/std",
	"cumulus-client-network/std",
	"cumulus-client-pov-recovery/std",
	"cumulus-relay-chain-inprocess-interface/std",
	"cumulus-relay-chain-interface/std",
	"cumulus-relay-chain-minimal-node/std",
	"sc-client-api/std",
	"sc-consensus/std",
	"sc-network/std",
	"sc-network-sync/std",
	"sc-network-transactions/std",
	"sc-rpc/std",
	"sc-service/std",
	"sc-sysinfo/std",
	"sc-telemetry/std",
	"sc-transaction-pool/std",
	"sc-utils/std",
	"sp-blockchain/std",
	"sp-consensus/std"
]
runtime-benchmarks = [
	"cumulus-client-cli/runtime-benchmarks",
	"cumulus-client-collator/runtime-benchmarks",
	"cumulus-client-consensus-common/runtime-benchmarks",
	"cumulus-client-network/runtime-benchmarks",
	"cumulus-client-pov-recovery/runtime-benchmarks",
	"cumulus-primitives-core/runtime-benchmarks",
	"cumulus-relay-chain-inprocess-interface/runtime-benchmarks",
	"cumulus-relay-chain-interface/runtime-benchmarks",
	"cumulus-relay-chain-minimal-node/runtime-benchmarks",
	"polkadot-primitives/runtime-benchmarks",
	"sc-client-api/runtime-benchmarks",
	"sc-consensus/runtime-benchmarks",
	"sc-network/runtime-benchmarks",
	"sc-network-sync/runtime-benchmarks",
	"sc-network-transactions/runtime-benchmarks",
	"sc-rpc/runtime-benchmarks",
	"sc-service/runtime-benchmarks",
	"sc-sysinfo/runtime-benchmarks",
	"sc-transaction-pool/runtime-benchmarks",
	"sp-api/runtime-benchmarks",
	"sp-blockchain/runtime-benchmarks",
	"sp-consensus/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"sp-transaction-pool/runtime-benchmarks",
	"cumulus-primitives-proof-size-hostfunction/runtime-benchmarks",
	"sc-telemetry/runtime-benchmarks",
	"sp-io/runtime-benchmarks",
	"sp-core/runtime-benchmarks"
]
try-runtime = [
	"cumulus-client-cli/try-runtime",
	"cumulus-client-collator/try-runtime",
	"cumulus-client-consensus-common/try-runtime",
	"cumulus-client-network/try-runtime",
	"cumulus-client-pov-recovery/try-runtime",
	"cumulus-primitives-core/try-runtime",
	"cumulus-relay-chain-inprocess-interface/try-runtime",
	"cumulus-relay-chain-minimal-node/try-runtime",
	"polkadot-primitives/try-runtime",
	"sc-client-api/try-runtime",
	"sc-consensus/try-runtime",
	"sc-network/try-runtime",
	"sc-network-sync/try-runtime",
	"sc-network-transactions/try-runtime",
	"sc-rpc/try-runtime",
	"sc-service/try-runtime",
	"sc-sysinfo/try-runtime",
	"sc-transaction-pool/try-runtime",
	"sp-api/try-runtime",
	"sp-blockchain/try-runtime",
	"sp-consensus/try-runtime",
	"sp-runtime/try-runtime",
	"sp-transaction-pool/try-runtime",
	"cumulus-primitives-proof-size-hostfunction/try-runtime",
	"cumulus-relay-chain-interface/try-runtime",
	"sc-telemetry/try-runtime",
	"sp-io/try-runtime",
	"sp-core/try-runtime"
]
