[package]
name = "cumulus-pallet-parachain-system"
version = "0.16.0"
authors.workspace = true
edition.workspace = true
description = "Base pallet for cumulus-based parachains (polkadot v1.15.0)"
license = "Apache-2.0"

[lints]
workspace = true

[dependencies]
bytes = { workspace = true }
codec = { features = ["derive"], workspace = true }
environmental = { workspace = true }
impl-trait-for-tuples = { workspace = true }
log = { workspace = true }
trie-db = { workspace = true }
scale-info = { features = ["derive"], workspace = true }
frame-benchmarking = { optional = true, workspace = true }
frame-support.workspace = true
frame-system.workspace = true
pallet-message-queue.workspace = true
sp-core.workspace = true
sp-externalities.workspace = true
sp-inherents.workspace = true
sp-io.workspace = true
sp-runtime.workspace = true
sp-state-machine.workspace = true
sp-std.workspace = true
sp-trie.workspace = true
sp-version.workspace = true
polkadot-parachain-primitives = { features = ["wasm-api"], workspace = true }
polkadot-runtime-parachains.workspace = true
polkadot-runtime-common = { optional = true, workspace = true }
xcm.workspace = true
xcm-builder.workspace = true
cumulus-pallet-parachain-system-proc-macro.workspace = true
cumulus-primitives-core.workspace = true
cumulus-primitives-parachain-inherent.workspace = true
cumulus-primitives-proof-size-hostfunction.workspace = true

[dev-dependencies]
assert_matches = { workspace = true }
hex-literal = { workspace = true, default-features = true }
lazy_static = { workspace = true }
trie-standardmap = { workspace = true }
rand = { workspace = true, default-features = true }
futures = { workspace = true }

# Substrate
sc-client-api = { default-features = true, path = "../../../substrate/client/api" }
sp-keyring = { default-features = true, path = "../../../substrate/primitives/keyring" }
sp-crypto-hashing = { default-features = true, path = "../../../substrate/primitives/crypto/hashing" }
sp-tracing = { default-features = true, path = "../../../substrate/primitives/tracing" }
sp-version = { default-features = true, path = "../../../substrate/primitives/version" }
sp-consensus-slots = { default-features = true, path = "../../../substrate/primitives/consensus/slots" }

# Cumulus
cumulus-test-client = { path = "../../test/client" }
cumulus-test-relay-sproof-builder = { default-features = true, path = "../../test/relay-sproof-builder" }
cumulus-test-runtime = { path = "../../test/runtime" }

[features]
default = ["std"]
std = [
	"bytes/std",
	"codec/std",
	"cumulus-pallet-parachain-system-proc-macro/std",
	"cumulus-primitives-core/std",
	"cumulus-primitives-parachain-inherent/std",
	"cumulus-primitives-proof-size-hostfunction/std",
	"environmental/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"pallet-message-queue/std",
	"polkadot-parachain-primitives/std",
	"polkadot-runtime-common/std",
	"polkadot-runtime-parachains/std",
	"scale-info/std",
	"sp-core/std",
	"sp-externalities/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-state-machine/std",
	"sp-std/std",
	"sp-trie/std",
	"trie-db/std",
	"xcm-builder/std",
	"xcm/std",
	"cumulus-test-client/std",
	"sc-client-api/std"
]

runtime-benchmarks = [
	"cumulus-primitives-core/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-message-queue/runtime-benchmarks",
	"polkadot-parachain-primitives/runtime-benchmarks",
	"polkadot-runtime-common/runtime-benchmarks",
	"polkadot-runtime-parachains/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
	"cumulus-test-client/runtime-benchmarks",
	"cumulus-primitives-parachain-inherent/runtime-benchmarks",
	"cumulus-test-relay-sproof-builder/runtime-benchmarks",
	"cumulus-test-runtime/runtime-benchmarks",
	"sc-client-api/runtime-benchmarks",
	"sp-inherents/runtime-benchmarks",
	"sp-keyring/runtime-benchmarks",
	"sp-state-machine/runtime-benchmarks",
	"sp-trie/runtime-benchmarks",
	"sp-version/runtime-benchmarks",
	"cumulus-primitives-proof-size-hostfunction/runtime-benchmarks",
	"sp-consensus-slots/runtime-benchmarks",
	"sp-io/runtime-benchmarks",
	"sp-core/runtime-benchmarks",
	"xcm/runtime-benchmarks"
]

try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-message-queue/try-runtime",
	"polkadot-runtime-common?/try-runtime",
	"polkadot-runtime-parachains/try-runtime",
	"sp-runtime/try-runtime",
	"cumulus-primitives-core/try-runtime",
	"cumulus-primitives-parachain-inherent/try-runtime",
	"cumulus-test-client/try-runtime",
	"cumulus-test-relay-sproof-builder/try-runtime",
	"cumulus-test-runtime/try-runtime",
	"frame-benchmarking?/try-runtime",
	"polkadot-parachain-primitives/try-runtime",
	"sc-client-api/try-runtime",
	"sp-inherents/try-runtime",
	"sp-keyring/try-runtime",
	"sp-state-machine/try-runtime",
	"sp-trie/try-runtime",
	"sp-version/try-runtime",
	"xcm-builder/try-runtime",
	"cumulus-primitives-proof-size-hostfunction/try-runtime",
	"sp-consensus-slots/try-runtime",
	"sp-io/try-runtime",
	"sp-core/try-runtime",
	"xcm/try-runtime"
]
